--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,19 +4,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 0.5rem;
+    // border: 1px solid red;
 
     .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img {
-            width: 4.5rem;
-            height: 4.5rem;
-        }
-        &::after {
-            content: "Snehal Garde ";
-            font-size: larger;
-            font-weight: 500;
+        :hover {
+            cursor: pointer;
         }
     }
 
@@ -30,6 +22,7 @@
             list-style: none;
             a {
                 text-decoration: none;
+                cursor: pointer;
             }
         }
     }
