Added responsive header styles

--- a/src/components/pages/Home/home.scss
+++ b/src/components/pages/Home/home.scss
@@ -45,3 +45,17 @@
         letter-spacing: 0.07em;
     }
 }
+
+.mobileheader {
+    padding: 1em;
+    padding-left: 2em;
+    padding-top: 1em;
+    .mobileh6 {
+        width: auto;
+    }
+
+    .mobileh3 {
+        width: auto;
+        font-size: 2.6rem;
+    }
+}
