--- a/src/components/pages/About/about.scss
+++ b/src/components/pages/About/about.scss
@@ -1,19 +1,107 @@
 .aboutBg {
-    background: url("../../../assets/images/lawyers.jpg") top center fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100dvw;
-    height: 100dvh;
-    z-index: -1;
+  background: url("../../../assets/images/lawyers.jpg") top center fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100dvw;
+  height: 100dvh;
+  z-index: -1;
 }
 .aboutBg2 {
-    background-color: rgb(32, 2, 22);
-    width: 100dvw;
-    height: 100dvh;
-    background-size: cover;
-    opacity: 0.85;
-    z-index: -1;
+  background-color: rgb(32, 2, 22);
+  width: 100dvw;
+  height: 100dvh;
+  background-size: cover;
+  opacity: 0.95;
+  z-index: -1;
+}
+
+.about-us-main-wrapper {
+  box-sizing: border-box;
+  display: flex;
+  padding: 0 3.5em;
+
+  .about-us-content-wrapper {
+    width: 50%;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+    .about-us-header {
+      h5 {
+        font-weight: 600;
+      }
+    }
+    h6 {
+      font-weight: 400;
+      opacity: 0.8;
+      margin: 1em 0;
+    }
+  }
+
+  .about-us-hero-image-wrapper {
+    width: 35em;
+    padding: 1em;
+
+    img {
+      border-radius: 10px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.team-main-wrapper {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+
+  .team-header-wrapper {
+    text-align: center;
+    margin: 1em 0;
+
+    h4 {
+      font-weight: 900;
+      font-size: 3em;
+    }
+
+    h6 {
+      opacity: 0.7;
+    }
+  }
+
+  .teams-card-wrapper-main {
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: space-evenly;
+
+    .team-cards-wrapper {
+      display: flex;
+      width: 30%;
+      padding: 1em;
+      align-items: center;
+      justify-content: center;
+      gap: 0.6em;
+      text-align: center;
+      flex-direction: column;
+      box-sizing: border-box;
+
+      img {
+        width: 10em;
+        height: 10em;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
+      h6,
+      p {
+        opacity: 0.7;
+      }
+    }
+  }
 }
