--- a/src/components/pages/Practice/practice.scss
+++ b/src/components/pages/Practice/practice.scss
@@ -1,19 +1,123 @@
 .practiceBg {
-    background: url("../../../assets/images/herobackground6.png") top center fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100dvw;
-    height: 100dvh;
-    z-index: -1;
+  background: url("../../../assets/images/herobackground6.png") top center fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100dvw;
+  height: 100dvh;
+  z-index: -1;
 }
 .practiceBg2 {
-    background-color: rgb(32, 2, 22);
-    width: 100dvw;
-    height: 100dvh;
-    background-size: cover;
-    opacity: 0.85;
-    z-index: -1;
+  background-color: #200216;
+  width: 100dvw;
+  height: 100dvh;
+  background-size: cover;
+  opacity: 0.95;
+  z-index: -1;
+}
+
+.practice-hero-wrapper {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  padding: 5em 10em;
+  .practice-header-wrapper {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+
+    h3 {
+      font-weight: 900;
+    }
+  }
+
+  .practice-hero-image {
+    width: 40%;
+    height: 30em;
+
+    img {
+      border-radius: 10px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.practice-section-wrapper-main {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  padding: 3em 15em;
+  background-color: #4f1e3e76;
+
+  .practice-section-header-wrapper {
+    text-align: center;
+
+    :nth-child(1) {
+      background-color: #fff;
+      color: #200216;
+      width: fit-content;
+      margin: auto;
+      box-sizing: border-box;
+      padding: 0.3em 0.6em;
+      border-radius: 10px;
+    }
+    :nth-child(2) {
+      margin: 0.4em;
+      font-weight: 600;
+    }
+    :nth-child(3) {
+      opacity: 0.7;
+      font-weight: 400;
+      width: 75%;
+      margin: auto;
+      margin-bottom: 1em;
+    }
+  }
+
+  .practice-section-content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+
+    .section-content {
+      width: 45%;
+      padding: 2em;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+      box-sizing: border-box;
+
+      .content {
+        * {
+          margin: 0.3em 0;
+        }
+        p {
+          opacity: 0.7;
+        }
+      }
+    }
+    .section-image {
+      width: 45%;
+      padding: 2em;
+      box-sizing: border-box;
+
+      img {
+        width: 100%;
+        border-radius: 10px;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
+.civil-law-main {
+  background-color: #200216;
 }
